--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,3 +1,26 @@
-<nav>
-  <a *ngFor="let item of items" [routerLink]="item.url" routerLinkActive="active">{{item.nombre}}</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <div class="container">
+      <a class="navbar-brand text-white"  [routerLink]="'/home'">PLASTICOL</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" (click)="isMenuCollapsed = !isMenuCollapsed"  *ngIf="currentUser">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div  [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarsExampleDefault">
+          <ul class="navbar-nav ml-auto" *ngIf="currentUser">
+             
+              <li class="nav-item " *ngFor="let item of items" >
+                  <a class="nav-link " [routerLink]="item.url" routerLinkActive="active"><i class="fa fa-th-list "></i>{{item.nombre}}</a>
+              </li>
+
+             
+              <li class="nav-item dropdown"  ngbDropdown >
+                  <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>
+                   <i class="fa fa-user"></i>{{currentUser.user.name | titlecase}} {{currentUser.user.last_name | titlecase}}
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" ngbDropdownMenu >
+                    <a class="dropdown-item" ngbDropdownItem (click)="logout()">Cerrar</a>
+                  </div>
+              </li>
+          </ul>
+      </div>
+  </div>
 </nav>
