--- a/src/app/feature/login/login.component.html
+++ b/src/app/feature/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row mt-5">
+        <form [formGroup]="loginForm" (ngSubmit)="login()" class="col-md-6 offset-md-3">
+            <h3 class="title">Bienvenido</h3>
+            <hr class="divisor">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Usuario</label>
+                <input  formControlName="username" type="email" class="form-control" id="user-input" placeholder="Email" [ngClass]="{ 'is-invalid': enviado && f.username.errors }">
+                <div *ngIf="enviado && f.username.errors" class="invalid-feedback">
+                    <div *ngIf="f.username.errors.required">Email es requerido</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Contraseña</label>
+                <input type="password"  formControlName="password" class="form-control" id="password" placeholder="Contraseña" [ngClass]="{ 'is-invalid': enviado && f.password.errors }">
+                <div *ngIf="enviado && f.password.errors" class="invalid-feedback">
+                    <div *ngIf="f.password.errors.required">Contraseña es requerido</div>
+                </div>
+            </div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3 float-right"><i class="fa fa-sign-in"></i> Ingresar</button>
+        </form>
+    </div>
+</div>
