--- a/src/app/feature/login/login.component.html
+++ b/src/app/feature/login/login.component.html
@@ -1,7 +1,11 @@
+<div class="col d-flex float-right justify-content-end">
+    <app-trm></app-trm>
+</div>
+
 <div class="container">
     <div class="row mt-5">
         <form [formGroup]="loginForm" (ngSubmit)="login()" class="col-md-6 offset-md-3">
-            <h3 class="title">Bienvenido</h3>
+            <h3 class="title">Bienvenido</h3>   
             <hr class="divisor">
             <div class="form-group">
                 <label for="exampleInputEmail1">Usuario</label>
