--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-navbar [items]='companies'></app-navbar>
-<router-outlet></router-outlet>
 
+<main role="main">
+    <router-outlet></router-outlet>
 
+</main>
+
+<hr class="mt-5">
+<app-footer></app-footer>
