--- a/src/app/feature/solicitud/components/solicitud/solicitud.component.html
+++ b/src/app/feature/solicitud/components/solicitud/solicitud.component.html
@@ -1,1 +1,6 @@
-<p>solicitud works!</p>
+<nav class="nav nav-pills p-2">
+    <a id="linkListarSolicitud" routerLink="./listar" routerLinkActive="active" class="nav-link" href="#">Listar solicitudes</a>
+    <a id="linkCrearSolicitud" routerLink="./crear" routerLinkActive="active" class="nav-link">Crear solicitud</a>
+</nav>
+
+<router-outlet></router-outlet>
