--- a/src/app/feature/solicitud/components/listar-solicitud/listar-solicitud.component.html
+++ b/src/app/feature/solicitud/components/listar-solicitud/listar-solicitud.component.html
@@ -1,5 +1,6 @@
 
 <div class="container mt-3">
+    <app-summary></app-summary>
     <div class="table-responsive">
 
         <table class="table table-hover">
