--- a/src/app/feature/solicitud/components/crear-solicitud/crear-solicitud.component.html
+++ b/src/app/feature/solicitud/components/crear-solicitud/crear-solicitud.component.html
@@ -42,7 +42,7 @@
 
                 <div class="row" *ngIf="totalPedido > 0">
                     <div class="col">
-                        <p> <strong>Tu solicitud tiene un costo de {{totalPedido | number : '1.2-2'}} $</strong></p>
+                        <p id="totalPedido"> <strong>Tu solicitud tiene un costo de {{totalPedido | number : '1.2-2'}} $</strong></p>
                     </div>
                 </div>
                 <small class="form-text text-muted">
