--- a/src/app/shared/components/trm/trm.component.html
+++ b/src/app/shared/components/trm/trm.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="currentTrm">
-    <p class="d-md-block d-none">
+    <p class="d-md-block d-none trm-element">
         TRM para hoy es <strong>{{currentTrm[0].valor}} {{currentTrm[0].unidad}}</strong>
     </p>
-    <p class="d-md-none d-block">
+    <p class="d-md-none d-block trm-element">
         TRM <strong>{{currentTrm[0].valor}} {{currentTrm[0].unidad}}</strong>
     </p>
 </ng-container>
