--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -3,6 +3,6 @@
     <div class="container">
         <h1 >Hola, {{session.user.name |titlecase}} {{session.user.last_name |titlecase}}!</h1>
         <p>Gracias por preferirnos te invitamos a ver el estado de tus pedidos.</p>
-        <p><a class="btn btn-primary"  role="button" [routerLink]="'/solicitud'">Solicitudes &raquo;</a></p>
+        <p><a class="btn btn-primary"  role="button" id="buttonIrSolicitudes" [routerLink]="'/solicitud'">Solicitudes &raquo;</a></p>
     </div>
 </div>
