Ajustando issues sonar

--- a/src/app/feature/login/login.component.html
+++ b/src/app/feature/login/login.component.html
@@ -25,7 +25,7 @@
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Recordarme</label>
             </div>
-            <button type="submit" id="login-btn" class="btn btn-primary mt-3 float-right"><i class="fa fa-sign-in"></i> Ingresar</button>
+            <button type="submit" id="login-btn" class="btn btn-primary mt-3 float-right">Ingresar</button>
         </form>
     </div>
 </div>
