--- a/src/app/feature/solicitud/components/listar-solicitud/listar-solicitud.component.html
+++ b/src/app/feature/solicitud/components/listar-solicitud/listar-solicitud.component.html
@@ -4,6 +4,7 @@
     <div class="table-responsive">
 
         <table class="table table-hover" id="listadoSolicitudesTabla">
+            <caption>Historial de solicitudes de los usuarios en el sistema</caption>
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">#</th>
